; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/light/extr_noa1305.c_noa1305_read_raw.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/light/extr_noa1305.c_noa1305_read_raw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iio_dev = type { i32 }
%struct.iio_chan_spec = type { i32 }
%struct.noa1305_priv = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@IIO_VAL_INT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iio_dev*, %struct.iio_chan_spec*, i32*, i32*, i64)* @noa1305_read_raw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @noa1305_read_raw(%struct.iio_dev* %0, %struct.iio_chan_spec* %1, i32* %2, i32* %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.iio_dev*, align 8
  %8 = alloca %struct.iio_chan_spec*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  %13 = alloca %struct.noa1305_priv*, align 8
  store %struct.iio_dev* %0, %struct.iio_dev** %7, align 8
  store %struct.iio_chan_spec* %1, %struct.iio_chan_spec** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i64 %4, i64* %11, align 8
  %14 = load i32, i32* @EINVAL, align 4
  %15 = sub nsw i32 0, %14
  store i32 %15, i32* %12, align 4
  %16 = load %struct.iio_dev*, %struct.iio_dev** %7, align 8
  %17 = call %struct.noa1305_priv* @iio_priv(%struct.iio_dev* %16)
  store %struct.noa1305_priv* %17, %struct.noa1305_priv** %13, align 8
  %18 = load i64, i64* %11, align 8
  switch i64 %18, label %47 [
    i64 130, label %19
    i64 129, label %36
  ]

19:                                               ; preds = %5
  %20 = load %struct.iio_chan_spec*, %struct.iio_chan_spec** %8, align 8
  %21 = getelementptr inbounds %struct.iio_chan_spec, %struct.iio_chan_spec* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  switch i32 %22, label %34 [
    i32 128, label %23
  ]

23:                                               ; preds = %19
  %24 = load %struct.noa1305_priv*, %struct.noa1305_priv** %13, align 8
  %25 = call i32 @noa1305_measure(%struct.noa1305_priv* %24)
  store i32 %25, i32* %12, align 4
  %26 = load i32, i32* %12, align 4
  %27 = icmp slt i32 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %23
  %29 = load i32, i32* %12, align 4
  store i32 %29, i32* %6, align 4
  br label %50

30:                                               ; preds = %23
  %31 = load i32, i32* %12, align 4
  %32 = load i32*, i32** %9, align 8
  store i32 %31, i32* %32, align 4
  %33 = load i32, i32* @IIO_VAL_INT, align 4
  store i32 %33, i32* %6, align 4
  br label %50

34:                                               ; preds = %19
  br label %35

35:                                               ; preds = %34
  br label %48

36:                                               ; preds = %5
  %37 = load %struct.iio_chan_spec*, %struct.iio_chan_spec** %8, align 8
  %38 = getelementptr inbounds %struct.iio_chan_spec, %struct.iio_chan_spec* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  switch i32 %39, label %45 [
    i32 128, label %40
  ]

40:                                               ; preds = %36
  %41 = load %struct.noa1305_priv*, %struct.noa1305_priv** %13, align 8
  %42 = load i32*, i32** %9, align 8
  %43 = load i32*, i32** %10, align 8
  %44 = call i32 @noa1305_scale(%struct.noa1305_priv* %41, i32* %42, i32* %43)
  store i32 %44, i32* %6, align 4
  br label %50

45:                                               ; preds = %36
  br label %46

46:                                               ; preds = %45
  br label %48

47:                                               ; preds = %5
  br label %48

48:                                               ; preds = %47, %46, %35
  %49 = load i32, i32* %12, align 4
  store i32 %49, i32* %6, align 4
  br label %50

50:                                               ; preds = %48, %40, %30, %28
  %51 = load i32, i32* %6, align 4
  ret i32 %51
}

declare dso_local %struct.noa1305_priv* @iio_priv(%struct.iio_dev*) #1

declare dso_local i32 @noa1305_measure(%struct.noa1305_priv*) #1

declare dso_local i32 @noa1305_scale(%struct.noa1305_priv*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
